# mizu

./: .gitignore  index.html  justfile  package-lock.json  package.json
.github/workflows/: release.yml
mcp-server/: index.js  package.json  ws-bridge.js
src/: App.css  App.tsx  design-system.css
src-tauri/: .env  .gitignore  Cargo.toml  app.db  tauri.conf.json
src-tauri/.sqlx/: query-2102bfde28880dcf021a84f82774cc839cd662ef0165e8cb3e94510de165e41a.json  query-45bcecdbb526fecd548189ed15fa5464b8334f194c887a2b9c3ce79c6f162fe3.json  query-494afca1505f25d0587ba56dca7cd67fdded391a7ca0f32a7ec171a59bafe832.json  query-4b1c83c844dc2e6578812777b4a03a3df25d59a2cdbeda122342c441baa9c7cc.json  query-4ce69fec2cffdf06ceb3bbeac515532fbf748eff971d592106a37012d4888789.json  query-74ad90ff49c6916db8cec2052c3fa963ab2569e0e82dc3a3e58416b40c534ff7.json  query-98a7e611149a32cc72585756a3e5337af3c11dfbdcf524223117236db19eb08f.json  query-e3fd48c145674d6b4a4c3f29629099a793a121c21676c86d75d5d2026e2a488f.json  query-f063083713713fbe0899a282f4969beab903554352dc0ce8e280b136e063eee5.json  query-f0f6004c95ee91a597c72ed97be50abcabb9c35da2c879cf6a9a635e701b0dc1.json  query-f5f5eca64fd5e66da33a6ba777208e5b6aa62c66ebe35652bfeaa933a6a0d628.json
src-tauri/migrations/: 20260426171322_init.sql  20260428000000_grades.sql
src-tauri/src/: ai_agents.rs  app_updater.rs  claude_cli.rs  lib.rs  main.rs  mcp.rs
src-tauri/src/calendar/: fetcher.rs
src/components/: AiPanel.tsx  CommandPalette.tsx  CourseOverview.tsx  Editor.tsx  GradesView.tsx  NoteList.tsx  Onboarding.tsx  PatternBuilder.tsx  Sidebar.tsx  (+6 more)
(+8 files in other folders)
