[package]
name = "mizu"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mizu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
log = "0.4.29"
gray_matter = "0.3.2"
walkdir = "2.5.0"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = {version = "1.52.1", features = ["full"] }
futures-util = "0.3.32"
base64 = "0.22.1"
regex = "1.12.3"
dirs = "6.0.0"
uuid = { version = "1.23.1", features = ["v4"] }
tempfile = "3.27.0"
sqlx = {version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono", "macros"] }
reqwest = "0.13.2"
icalendar = "0.17.10"
anyhow = "1.0.102"

